# opengl2d

./: CMakeLists.txt  README.md  engine.h  main.cpp
Collisions/: Collider.cpp  Collider.h
GAME/: Character.cpp  Character.h  Tile.cpp  Tile.h
Shaders/: ShaderProgram.cpp  ShaderProgram.h
Shaders/GLSL/: circleFlatFragment.glsl  flatFragment.glsl  flatVertex.glsl  simle_fragment.glsl  simple_vertex.glsl  textFragment.glsl  textVertex.glsl
Shaders/GLSL/postProccessing/: blurFragmentHorizontal.glsl  blurVertexHorizontal.glsl  blurVertexVertical.glsl  contrast_fragment.glsl  default_fragment.glsl  default_vertex.glsl
Sprites/: Image.cpp  Image.h  Sprite.cpp  Sprite.h
Utils/: Camera.cpp  Camera.h  Display.cpp  Display.h  Enums.h  FBO.cpp  FBO.h  Renderer.cpp  Renderer.h  Timer.cpp  Timer.h  Utils.h
